[package]
name = "earnings-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.16.0"
anyhow = "1.0.71"
chrono = "0.4.24"
tokio = { version = "1.28.1", features = ["full"] }
thirtyfour = "0.31.0"
async-trait = "0.1.68"
clap = "4.3.0"