[package]
name = "earnings-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.17.1"
anyhow = "1.0.75"
chrono = "0.4.31"
tokio = { version = "1.31.0", features = ["full"] }
thirtyfour = "0.31.0"
async-trait = "0.1.73"
clap = "4.4.4"