[package]
name = "earnings-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.19.1"
anyhow = "1.0.86"
chrono = "0.4.38"
tokio = { version = "1.39.2", features = ["full"] }
thirtyfour = "0.33.0"
async-trait = "0.1.81"
clap = "4.4.6"